# henceforth

./: .gdbinit  404.html  Cargo.toml  README.md  cfg.dot  index.html  more_ideas.hfs  print.html  rustfmt.toml  searchindex.js  test.hfs  test.txt  toc.js
.cargo/: config.toml
.github/workflows/: deploy.yml  rust.yml
docs/: book.toml  index.html
docs/book/: 404.html  index.html  searchindex.js  toc.html  toc.js
docs/guide/: book.toml
docs/output/: index.html
docs/reference/: book.toml
docs/src/: SUMMARY.md  intro.md
getting-started/: first-program.html  installation.html  quick-start.html
src/: CFG-to-LLVM-IR-example.ll  CFG-to-LLVM-IR-example.md  HFS-MIR-to-LLVM-IR-example.ll  HFS-MIR-to-LLVM-IR-example.md  ast_node.rs  builder.rs  henceforth-bnf.md  henceforth-example.md  lang-spec.md  lexer.rs  lib.rs  main.rs  parser.rs  semantic_analysis.rs  token.rs  tokens.rs  types.rs
src/hfs/: ast.rs  ast_interpreter.rs  ast_node.rs  builder.rs  cfg_analyzer.rs  cfg_builder.rs  hfs_ir.rs  hfs_mir.rs  hfs_stack.rs  (+19 more)
test/: complex_fizzbuzz.hfs  comprehensive-else-if.hfs  copy_and_move.hfs  copy_and_move_func_calls.hfs  function_with_lots_of_arguments.hfs  function_with_no_arguments.hfs  function_with_no_return_type.hfs  if_elif_else.hfs  loop_tictactoe.hfs  mycooltest.hfs  operations.hfs  partially_implicit_function_calls.hfs  simple_if_else.hfs  simple_main.hfs  tictactoe-ptrs-and-new-ifs.hfs  tictactoe.hfs  variable_declarations.hfs  while_loop.hfs
tests/: compile_tests.rs  error_tests.rs  lexer_tests.rs  opt_tests.rs  parser_tests.rs  stack_analyzer_tests.rs
(+263 files in other folders)
