[package]
name = "henceforth"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
colored = "3.1.1"

[dev-dependencies]
pretty_assertions = "1.4.1"

[lib]
name = "henceforth"
path = "src/lib.rs"

[[test]]
name = "error_tests"
path = "src/hfscheck/test_generators/error_tests.rs"
harness = false

[[test]]
name = "lexer_tests"
path = "src/hfs/builder/static_tests/lexer_tests.rs"
harness = true

[[test]]
name = "parser_tests"
path = "src/hfs/builder/static_tests/parser_tests.rs"
harness = true

[[test]]
name = "stack_analyzer_tests"
path = "src/hfs/builder/static_tests/stack_analyzer_tests.rs"
harness = true

