[package]
name = "henceforth"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
colored = "3.1.1"
libtest-mimic = "0.8.2"

[dev-dependencies]
pretty_assertions = "1.4.1"

[lib]
name = "henceforth"
path = "src/lib.rs"

[[test]]
name = "error_tests"
path = "tests/error_tests.rs"
harness = false
